--- a/byond-extools/CMakeLists.txt
+++ b/byond-extools/CMakeLists.txt
@@ -38,6 +38,7 @@ if (WIN32)
     if (MSVC OR (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "MSVC"))
         target_compile_options(byond-extools PRIVATE "/MP")
         target_compile_options(byond-extools PRIVATE "$<$<CONFIG:RELWITHDEBINFO>:/Ob2;/Zc:inline;/arch:AVX;/Oi;/Ot;/fp:fast;/Qvec-report:1;/std:c++latest>")
+        target_link_options(byond-extools PRIVATE "$<$<CONFIG:RELWITHDEBINFO>:/PDBSTRIPPED:RelWithDebInfo/smallpdb.pdb;/OPT:REF,ICF>")
         target_compile_options(byond-extools PRIVATE "$<$<CONFIG:RELEASE>:/Ob2;/Zc:inline;/arch:AVX;/Oi;/Ot;/fp:fast;/Qvec-report:1;/std:c++latest>")
         target_compile_options(byond-extools PRIVATE "$<$<CONFIG:MINSIZEREL>:/Ob2;/Zc:inline;/arch:AVX;/Oi;/Os;/fp:fast;/Qvec-report:1;/std:c++latest>")
     else()
